Revision history for RPi-Pin

2.3601  2017-05-27
        - separated this distribution from RPi::WiringPi::Pin
        - added set_interrupt(), deprecated interrupt_set()